z-index issue

--- a/src/index.css
+++ b/src/index.css
@@ -298,6 +298,9 @@ body {
   justify-content: center;
   gap: 1.2rem;
   margin-top: 1.8rem;
+  position: relative;
+  z-index: -1;
+
 }
 .embla__buttons {
   display: grid;
